# BeamMP-Server

./: .clang-format  .gitignore  .gitmodules  .validaterc  BEAMMP_PROTOCOL_DOCS.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Changelog.md  Dockerfile  LICENSE  LICENSE.md  README.md  ServerConfig.toml  TODO.md  docker-build.sh  enet.lib  index.js  openapi.yml  package-lock.json  package.json  vcpkg.cmake  vcpkg.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md  feature_request.md
.github/workflows/: build-debian-11.yml  build-linux.yml  build-ubuntu-22.04.yml  build-windows.yml  cmake-linux.yml  cmake-windows.yml  linux.yml  release-build.yml  release.yml  rust.yml  windows.yml
Resources/Server/TestPlugin/: main.lua
cmake/: CompilerWarnings.cmake  Git.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Vcpkg.cmake
include/: ArgsParser.h  Assert.h  BoostAliases.h  Buffer.h  ChronoWrapper.h  Client.h  Client.hpp  Common.h  Compat.h  Compressor.h  Cryptography.h  CustomAssert.h  Defer.h  Env.h  Environment.h  Error.h  FileWatcher.h  HashMap.h  Http.h  IThreaded.h  IterationDecision.h  Json.h  Logger.h  LuaAPI.h  LuaPlugin.h  Network.h  Plugin.h  PluginManager.h  Profiling.h  RWMutex.h  RateLimiter.h  Sentry.h  Settings.h  SignalHandling.h  SocketIO.h  Startup.h  Sync.h  TConfig.h  TConsole.h  THeartbeatThread.h  (+19 more)
include/Curl/: Http.h  curl.h  typecheck-gcc.h
include/Lua/: LuaSystem.hpp  luaconf.h
include/Security/: Enc.h  Xor.h
include/Zlib/: zconf.h  zutil.h
include/watchdog/: CMakeLists.txt  stack_string.h  watchdog.cpp  watchdog.h  x64Def.asm
lib/: CMakeLists.txt
scripts/: ArchLinux-Dockerfile  Debian-11-Dockerfile  Ubuntu-20.04-Dockerfile  Ubuntu-22.04-Dockerfile  build-all.sh  debian_build.sh  install.sh
scripts/debian/: 1-install-deps.sh  2-configure.sh  3-build-tests.sh  3-build.sh  4-install-runtime-deps.sh
scripts/debian-11/: 1-install-deps.sh  2-configure.sh  3-build-tests.sh  3-build.sh
scripts/debian-12/: 1.5-git-safe.sh  2-configure.sh
scripts/ubuntu-22.04/: 2-configure.sh
scripts/ubuntu-24.04/: 4-install-runtime-deps.sh
scripts/windows/: 1-configure.sh  2-build.sh
src/: ArgsParser.cpp  ChronoWrapper.cpp  Client.cpp  Common.cpp  Compat.cpp  Compressor.cpp  Console.cpp  Enc.cpp  Env.cpp  FileWatcher.cpp  Http.cpp  LuaAPI.cpp  LuaPlugin.cpp  Network.cpp  Profiling.cpp  RateLimiter.cpp  Resources.cpp  Sentry.cpp  Settings.cpp  Settings.hpp  SignalHandling.cpp  SocketIO.cpp  TConfig.cpp  TConsole.cpp  THeartbeatThread.cpp  TLuaEngine.cpp  TLuaEvent.cpp  TLuaFile.cpp  TLuaPlugin.cpp  TNetwork.cpp  TPPSMonitor.cpp  TPluginMonitor.cpp  TResourceManager.cpp  TScopedTimer.cpp  TSentry.cpp  TServer.cpp  TTCPServer.cpp  TUDPServer.cpp  Update.cpp  Uuid.cpp  (+19 more)
src/Init/: Config.cpp  Heartbeat.cpp  Resources.cpp  Startup.cpp
src/Lua/: LuaMain.cpp  LuaSystem.cpp
src/Lua System/: LuaMain.cpp  LuaSystem.cpp  LuaSystem.hpp
src/Network/: Auth.cpp  Client.cpp  ClientHandler.cpp  DataParser.cpp  GParser.cpp  Http.cpp  InitClient.cpp  NetMain.cpp  Server.cpp  StatMonitor.cpp  Sync.cpp  TCPClientHandler.cpp  TCPHandler.cpp  VehicleData.cpp  Websocket.cpp  enet.h  enet.hpp  functions.cpp
src/Network 2.0/: Client.cpp  Client.hpp  ClientInterface.cpp  DataParser.cpp  Handler.cpp  NetworkMain.cpp  ResourceSync.cpp  Security.cpp  StatMonitor.cpp  VehicleData.cpp  VehicleEvent.cpp
src/enet/: enet.h  unix.h
src/server/: backend.rs  car.rs  client.rs  http.rs  mod.rs  packet.rs
src/server/plugins/: backend_lua.rs  mod.rs
test/: test_main.cpp
test/Server/JsonTests/: main.lua
