[package]
name = "beammp_rust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4.0"

lazy_static = "1"

anyhow = "1.0.66"
nalgebra = "0.31"
num_enum = "0.5.7"

async-trait = "0.1.58"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "sync"] }

reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"

toml = "0.5"
flate2 = "1.0"

mlua = { version = "0.9.1", features = ["lua54", "vendored"] }
