[package]
name = "beammp_rust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4.0"

argh = "0.1.12"

lazy_static = "1"

anyhow = "1.0.66"
glam = "0.24.2"
num_enum = "0.5.7"

async-trait = "0.1.58"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "sync"] }
futures = "0.3.29"

reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "*"

toml = "0.5"
flate2 = "1.0"

mlua = { version = "0.9.1", features = ["lua54", "vendored", "send"] }

ratatui = "0.24.0"
crossterm = "0.27.0"
uuid = "1.6.1"
